--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -89,8 +89,32 @@
 ////////////////////////////////////////////////
     /////// 9media ////////////////
 ////////////////////////////////////////////////
-.top-navigation {
+.menu {
+	background-color: white;
 	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	color: black;
+}
+
+.logo_menu_home {
+	margin-left: 1rem;
+}
+
+img.logo {
+	height: 40px;
+}
+
+.menu_entry {
+	cursor: pointer;
+}
+
+.menu_entry:hover {
+	color: #777;
+}
+
+.social_link {
+	font-size: 2rem;
 }
 
 
