--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -56,8 +56,27 @@
   src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
   font-style: normal;
 }
-.top-navigation {
+.menu {
+  background-color: white;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: black;
+}
+.logo_menu_home {
+  margin-left: 1rem;
+}
+img.logo {
+  height: 40px;
+}
+.menu_entry {
+  cursor: pointer;
+}
+.menu_entry:hover {
+  color: #777;
+}
+.social_link {
+  font-size: 2rem;
 }
 body {
   font-size: 16px;
