--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -2,8 +2,8 @@
 	<nav  role="navigation" class="menu">
         <!-- Bouton home 9media -->
 		<div class="logo_menu_home">
-			<a ng-href="$location.path()" class="ng-scope">
-			<img alt="" class="img-responsive logo" ng-src="/dam?media-id=5bb4c837396588895d5ef67f&amp;">
+			<a ng-href="menuCtrl.currentRouteline" class="ng-scope">
+			<img alt="" class="img-responsive logo" ng-src="/dam?media-id=5bb4c837396588895d5ef67f">
 			</a>
 		</div>
 
