--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -92,10 +92,11 @@
 	align-items: center;
 	justify-content: space-between;
 	color: @primary;
+	height: 8vh;
 }
 
 .logo_menu_home {
-	margin-left: 1rem;
+	margin-left: 2rem;
 }
 
 .logo_menu_home > div {
@@ -118,6 +119,10 @@ img.logo {
     letter-spacing: 4px;
 }
 
+.menu_social {
+	margin-right: 2rem;
+}
+
 .menu_entry {
 	cursor: pointer;
 }
@@ -134,16 +139,9 @@ img.logo {
     color: @primary;
 }
 
-ul.liens_menu {
-
-}
-
 ul.liens_menu a {
 	color: @primary;
-	height: 3vh;
-	line-height: 3vh;
-	border-left: 1px solid @primary;
-	padding: 0 2rem;
+	padding: 0 2.2rem;
 }
 
 .lborder {
