--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -2,7 +2,7 @@
 	<nav  role="navigation" class="menu">
         <!-- Bouton home 9media -->
 		<div class="logo_menu_home">
-			<div ng-click="{{$window.location.href = '/fr/'}}" class="ng-scope">
+			<div ng-click="{{menuCtrl.go('/fr/')}}" class="ng-scope">
                 <img alt="" class="img-responsive logo" ng-src="/dam?media-id=5bb4c837396588895d5ef67f">
                 <div class="neuf_media"><span style="font-weight:bold">NEUF.</span>MEDIA</div>
             </div>
