--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -56,56 +56,6 @@
   src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
   font-style: normal;
 }
-.menu {
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #333;
-  height: 8vh;
-}
-.logo_menu_home {
-  margin-left: 2rem;
-}
-.logo_menu_home > div {
-  color: #333;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  font-size: 2rem;
-  font-family: OswaldLight;
-  cursor: pointer;
-}
-img.logo {
-  height: 5vh;
-}
-.neuf_media {
-  color: #333;
-  margin-left: 1rem;
-  letter-spacing: 5px;
-}
-.menu_social {
-  margin-right: 2rem;
-}
-.menu_entry {
-  cursor: pointer;
-}
-.menu_entry:hover {
-  color: #777;
-}
-.social_link {
-  font-size: 2rem;
-}
-.social_link i {
-  color: #333;
-}
-ul.liens_menu a {
-  color: #333;
-  padding: 0 2.2rem;
-}
-.lborder {
-  border-left: 1px solid #333;
-}
 body {
   font-size: 16px;
   min-height: 100%;
@@ -113,7 +63,7 @@ body {
 }
 html,
 body {
-  font-family: 'MyanmarText', 'Arimo', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'OswaldLight', 'NexaLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   height: 100%;
   overflow: auto;
   background-color: #fff;
@@ -168,4 +118,59 @@ body {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background: transparent !important;
+}
+.menu {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #333;
+  height: 8vh;
+}
+.logo_menu_home {
+  margin-left: 2rem;
+}
+.logo_menu_home > div {
+  color: #333;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  font-family: OswaldLight;
+  cursor: pointer;
+}
+img.logo {
+  height: 5vh;
+}
+.neuf_media {
+  color: #333;
+  margin-left: 1rem;
+  letter-spacing: 5px;
+}
+.menu_social {
+  margin-right: 2rem;
+}
+.menu_entry {
+  cursor: pointer;
+}
+.menu_entry:hover {
+  color: #777;
+}
+.social_link {
+  font-size: 2rem;
+}
+.social_link i {
+  color: #333;
+}
+ul.liens_menu a {
+  color: #333;
+  padding: 0 2.2rem;
+}
+.lborder {
+  border-left: 1px solid #333;
+}
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 3rem 3rem;
 }
