--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -1,3 +1,13 @@
+/* .clearfix() {
+  &:before,
+  &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+} */
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
