--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -1,5 +1,5 @@
 // Mixin itself
-.clearfix() {
+/* .clearfix() {
   &:before,
   &:after {
     content: " ";
@@ -8,7 +8,7 @@
   &:after {
     clear: both;
   }
-}
+} */
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 
 @font-face {
