--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -1,13 +1,3 @@
-/* .clearfix() {
-  &:before,
-  &:after {
-    content: " ";
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
-} */
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
@@ -66,69 +56,6 @@
   src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
   font-style: normal;
 }
-body {
-  font-size: 16px;
-  min-height: 100%;
-  line-height: 1.4em;
-}
-html,
-body {
-  font-family: 'OswaldLight', 'NexaLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  height: 100%;
-  overflow: auto;
-  background-color: #fff;
-  color: #333;
-}
-.container-fluid {
-  padding: 0;
-  overflow: hidden;
-}
-.first {
-  margin-top: 70px;
-}
-.paddingv {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-@media screen and (min-width: 768px) {
-  li:hover > .dropdown-menu {
-    display: block;
-  }
-}
-/*FIXES*/
-.rubedo-block-contentContribution {
-  min-height: 0 !important;
-}
-@media screen and (min-width: 992px) and (max-width: 1200px) {
-  .navbar > .container .navbar-brand,
-  .navbar > .container-fluid .navbar-brand {
-    margin-left: 12px;
-  }
-}
-.dropdown-menu {
-  min-width: 0;
-  background-color: white;
-}
-@media screen and (min-width: 992px) {
-  .navbar-collapse {
-    text-align: center;
-  }
-  .navbar-collapse .navbar-nav {
-    float: none;
-    display: inline-block;
-    margin-bottom: -9px;
-  }
-  .navbar-right .dropdown-menu {
-    right: auto;
-    left: 0;
-    min-width: 100%;
-  }
-}
-.nav .open > a,
-.nav .open > a:hover,
-.nav .open > a:focus {
-  background: transparent !important;
-}
 .menu {
   background-color: #fff;
   display: flex;
@@ -183,4 +110,458 @@ ul.liens_menu a {
   background-color: #333;
   color: white;
   padding: 3rem 3rem;
+}
+body {
+  font-size: 16px;
+  min-height: 100%;
+  line-height: 1.4em;
+}
+html,
+body {
+  font-family: 'MyanmarText', 'Arimo', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+  overflow: auto;
+  background-color: #fff;
+  color: #1b1b1b;
+}
+.container-fluid {
+  padding: 0;
+  overflow: hidden;
+}
+.first {
+  margin-top: 70px;
+}
+.paddingv {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  li:hover > .dropdown-menu {
+    display: block;
+  }
+}
+.txt-grey {
+  color: #707070;
+}
+h2.titre-block {
+  text-transform: uppercase;
+  font-family: 'MyanmarText Bold';
+  margin-bottom: 24px;
+  color: #707070;
+  letter-spacing: 3px;
+}
+h2.titre-block:before,
+h2.titre-block:after {
+  content: '';
+  display: inline-block;
+  height: 2px;
+  background-color: #bfbfbf;
+  width: 100%;
+  max-width: 20%;
+  vertical-align: middle;
+}
+/*FIXES*/
+.rubedo-block-contentContribution {
+  min-height: 0 !important;
+}
+/*NAVIGATION*/
+.navbar {
+  background: white;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  border: none;
+  transition: all ease 2s;
+}
+.navbar .navbar-toggle .icon-bar {
+  background: #1b1b1b;
+}
+.navbar.transparent {
+  background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#40000000', GradientType=0);
+  /* IE6-9 */
+  border-radius: 0;
+  box-shadow: none;
+}
+.navbar.transparent .navbar-nav > li > a {
+  color: white;
+}
+.navbar.transparent .navbar-nav > li > a:hover {
+  color: #006ba8;
+}
+.navbar.transparent li:hover,
+.navbar.transparent li a:hover {
+  background: transparent;
+}
+.navbar.transparent .navbar-toggle .icon-bar {
+  background: white;
+}
+.navbar.transparent dropdown-menu li > a:hover {
+  background-color: #fff;
+}
+.navbar-nav li > a,
+dropdown-menu li > a {
+  color: #006ba8;
+  font-size: 15px;
+  padding: 25px 10px;
+}
+.navbar-nav li > a:hover,
+dropdown-menu li > a:hover {
+  color: #006ba8;
+}
+dropdown-menu li > a {
+  padding: 15px 10px;
+}
+.navbar > .container .navbar-brand,
+.navbar > .container-fluid .navbar-brand {
+  margin-left: 50px;
+  padding: 6px 0;
+  height: auto;
+}
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .navbar > .container .navbar-brand,
+  .navbar > .container-fluid .navbar-brand {
+    margin-left: 12px;
+  }
+}
+.dropdown-menu {
+  min-width: 0;
+  background-color: white;
+}
+@media screen and (min-width: 992px) {
+  .navbar-collapse {
+    text-align: center;
+  }
+  .navbar-collapse .navbar-nav {
+    float: none;
+    display: inline-block;
+    margin-bottom: -9px;
+  }
+  .navbar-right .dropdown-menu {
+    right: auto;
+    left: 0;
+    min-width: 100%;
+  }
+}
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
+  background: transparent !important;
+}
+.dropdown-menu > .active > a,
+.dropdown-menu > .active > a:hover,
+.dropdown-menu > .active > a:focus {
+  background-color: white;
+  color: #006ba8;
+}
+/*BACKGROUND IMAGE*/
+header.content {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: scroll;
+  background-size: cover;
+  height: 420px;
+  line-height: 420px;
+  text-align: center;
+}
+header.content h1,
+header.content h2,
+header.content h3,
+header.content h4,
+header.content h5,
+header.content p {
+  color: white;
+  text-shadow: 2.5px 2.5px 2.5px rgba(0, 0, 0, 0.33);
+}
+header.content a,
+header.content a:hover {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  padding: 3px 12px 0px;
+  border: 2px solid white;
+  border-radius: 18px;
+  text-transform: uppercase;
+}
+header.content h1 {
+  font-size: 3em;
+}
+header.content p {
+  font-size: 1.2em;
+}
+.bethanien header.content.parallax {
+  background-attachment: fixed;
+}
+header.content.full {
+  height: 100vh;
+  line-height: 100vh;
+  background-attachment: scroll;
+}
+header.content.full img {
+  max-width: 80%;
+}
+header.content.full h1 {
+  font-size: 3em;
+  text-transform: uppercase;
+}
+header.content.full p {
+  font-size: 2em;
+}
+header.content.standard {
+  height: 65vh;
+  line-height: 65vh;
+  background-attachment: scroll;
+}
+header.content.standard h1 {
+  font-size: 3em;
+  text-transform: uppercase;
+}
+header.content.standard p {
+  font-size: 1.3em;
+}
+header.content > div {
+  line-height: normal;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+}
+/*@media screen and (min-width: @min_sm) {
+    header.content{line-height: 600px; height:600px}
+    header.content>div{text-align: left; vertical-align: bottom; padding-bottom: 24px}
+}*/
+header.content.prop > div {
+  text-align: center;
+  vertical-align: middle;
+  padding-bottom: 0;
+}
+/*TEXTE*/
+.texte {
+  padding: 80px 15px;
+  max-width: 860px;
+  font-size: 1.1em;
+  line-height: 1.4em;
+  margin: 0 auto;
+}
+iframe {
+  width: 100% !important;
+}
+/*CONTENT LIST*/
+.contentList {
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.contentList > div {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+.pageList {
+  margin-bottom: 24px;
+  /*a:before{
+    	content: "";
+    	position: absolute;
+    	top: 0;
+		right: 15px;
+		bottom: 34px;
+		left: 15px;
+		background-image:linear-gradient(225deg, rgba(31, 31, 46, 0.5) 0%, rgba(77, 77, 102, 0.4) 49%, rgba(21, 21, 31, 0.5) 100%);
+		transition: opacity ease 0.5s;
+		opacity: 0.7;
+	}
+	a:hover:before{
+		opacity: 0.2;
+		transition: opacity ease 0.5s;
+	}*/
+}
+.pageList a {
+  display: inline-block;
+  position: relative;
+}
+.pageList div:first-of-type {
+  overflow: hidden;
+  background-color: rgba(31, 31, 46, 0.8);
+}
+.pageList div:last-of-type {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+}
+.pageList a p,
+.pageList a h3 {
+  color: white;
+  text-decoration: none;
+}
+.pageList h3,
+.pageList h3 {
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.pageList img {
+  margin: 0;
+  width: 100%;
+  opacity: 0.9;
+  transition: all 0.5s ease;
+}
+.pageList a:hover img {
+  transform: scale(1.05);
+  opacity: 0.5;
+}
+.album {
+  background: white;
+  text-align: left;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+.album a,
+.album a:hover {
+  color: #1b1b1b;
+  text-decoration: none;
+}
+.album div {
+  padding: 10px;
+  height: 50px;
+  overflow-y: hidden;
+}
+.album img {
+  margin: 0;
+  width: 100%;
+  opacity: 0.9;
+  transition: all 0.5s ease;
+}
+.album a:hover img {
+  opacity: 0.5;
+}
+.album h4 {
+  text-align: center;
+}
+.video {
+  width: 250px;
+  height: 250px;
+  overflow: hidden;
+  margin: 0 auto -125px;
+  position: relative;
+  top: -125px;
+  border: 10px solid white;
+  border-radius: 50%;
+}
+.video iframe {
+  width: 100% !important;
+  height: 140% !important;
+  margin-top: -20%;
+}
+.video + .video {
+  top: -250px;
+  margin-bottom: -250px;
+}
+.videoList {
+  background: white;
+  padding-bottom: 10px;
+  margin-top: 150px;
+}
+.videoList h3 {
+  text-transform: uppercase;
+  color: #707070;
+}
+.videoList .video-txt {
+  padding: 10px;
+  height: 200px;
+  overflow-y: hidden;
+}
+p.linkbox a,
+p.linkbox a:hover {
+  color: #bfbfbf;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 12px 0px;
+  border: 2px solid #bfbfbf;
+  border-radius: 18px;
+  text-transform: uppercase;
+}
+/*ALBUM*/
+.socials {
+  font-size: 30px;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 12px;
+}
+/*FOOTER*/
+.footer {
+  background: #1b1b1b;
+  color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer a {
+  color: white;
+}
+/*SECTION PRESENTATION*/
+.row-eq-height .text-container {
+  font-size: 130%;
+  line-height: 130%;
+  text-align: center;
+  color: #707070;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.row-eq-height .text-container img {
+  transition: all 0.3 ease;
+}
+@media screen and (min-width: 768px) {
+  .row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .row-eq-height img:hover {
+    opacity: 0.9;
+  }
+  .row-eq-height .text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contact > div + div {
+    border-left: #707070 2px solid;
+  }
+}
+/*SLIDER*/
+.carousel-inner,
+.fill {
+  background-color: #006ba8;
+}
+.carousel-control {
+  background-image: none !important;
+  cursor: pointer;
+  width: 10%;
+  opacity: 0.9;
+}
+.carousel-control span {
+  position: relative;
+  font-size: 1.5em;
+  width: 35px;
+  height: 35px;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+.carousel-control span:hover {
+  border-color: #006ba8;
+  background-color: #006ba8;
+}
+/*LISTE DEPLIANTE*/
+.panel-title a:hover {
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+.panel-body {
+  font-size: 1em;
 }
