--- a/theme/9media/css/9media.css
+++ b/theme/9media/css/9media.css
@@ -56,6 +56,69 @@
   src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
   font-style: normal;
 }
+body {
+  font-size: 16px;
+  min-height: 100%;
+  line-height: 1.4em;
+}
+html,
+body {
+  font-family: 'OswaldLight', 'NexaLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 100%;
+  overflow: auto;
+  background-color: #fff;
+  color: #333;
+}
+.container-fluid {
+  padding: 0;
+  overflow: hidden;
+}
+.first {
+  margin-top: 70px;
+}
+.paddingv {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  li:hover > .dropdown-menu {
+    display: block;
+  }
+}
+/*FIXES*/
+.rubedo-block-contentContribution {
+  min-height: 0 !important;
+}
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+  .navbar > .container .navbar-brand,
+  .navbar > .container-fluid .navbar-brand {
+    margin-left: 12px;
+  }
+}
+.dropdown-menu {
+  min-width: 0;
+  background-color: white;
+}
+@media screen and (min-width: 992px) {
+  .navbar-collapse {
+    text-align: center;
+  }
+  .navbar-collapse .navbar-nav {
+    float: none;
+    display: inline-block;
+    margin-bottom: -9px;
+  }
+  .navbar-right .dropdown-menu {
+    right: auto;
+    left: 0;
+    min-width: 100%;
+  }
+}
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
+  background: transparent !important;
+}
 .menu {
   background-color: #fff;
   display: flex;
