--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -1,19 +1,14 @@
 <div ng-controller="ContentListController as contentListCtrl">
-    <div class="row">
-        <div ng-style="contentListCtrl.blockStyle">
-            <div class="media" ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in contentListCtrl.contents track by $index">
-                
-                <div class="image_container" ng-class="{'pair': $even}" 
-                    style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')">
-                    <h4>
-                        {{content.fields.text}}
-                    </h4>
-                    <p ng-if="!contentListCtrl.titleOnly&&!fieldEditMode">
-                        {{content.fields.summary}}
-                    </p>
-                </div>
-                
-            </div>
+    <div class="row">         
+        <div class="col-xs-12 col-md-6 image_container" ng-class="{'pair': $even}" 
+            style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
+            ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in contentListCtrl.contents track by $index">
+            <h4>
+                {{content.fields.text}}
+            </h4>
+            <p ng-if="!contentListCtrl.titleOnly&&!fieldEditMode">
+                {{content.fields.summary}}
+            </p>
         </div>
     </div>
 </div>
