--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -86,8 +86,23 @@
 @primary:#333;
 
 ////////////////////////////////////////////////
-    /////// LEGACY ////////////////
+    /////// GLOBAL ////////////////
 ////////////////////////////////////////////////
+
+/*TYPO*/
+h1{font-weight: bold; font-size:24px}
+@media screen and (min-width: @min_xs) and (max-width:@min_sm){h1{font-size: 32px}}
+@media screen and (min-width: @min_sm){h1{font-size: 48px}}
+h2{font-weight: bold}
+@media screen and (min-width: @min_sm){
+    h3{
+        font-size:28px;
+        font-weight: bold; 
+        line-height: 1.25em;
+    }
+}
+h4{font-weight: bold;font-size: 20px; margin:0; margin-bottom: 5px; line-height: 1.4em}
+@media screen and (min-width: @min_md) and (max-width: @min_lg){h3{font-size:24px}}
 
 body{
     font-size:16px; 
@@ -128,6 +143,31 @@ html,body{
 	background: transparent !important;
 }
 
+////////////////////////////////////////////////
+    /////// CONTENTLIST ACCUEIL ////////////////
+////////////////////////////////////////////////
+
+.image_container {
+    height: 200px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
+    background-size: cover;
+    overflow: hidden;
+    padding: 20px;
+}
+
+@media screen and (min-width: @min_xs) {
+    .image_container {
+        height: 300px;
+    }
+}
+
+@media screen and (min-width: @min_sm) {
+    .image_container {
+        height: 400px;
+    }
+}
 
 ////////////////////////////////////////////////
     /////// MENU ////////////////
