--- a/theme/cte/templates/blocks/navigation.html
+++ b/theme/cte/templates/blocks/navigation.html
@@ -39,7 +39,6 @@
                                             <div ng-include="rubedo.blockTemplateResolver.getTemplate('footer',{ })" ng-if="menuCtrl.isFrance"></div>
                                             <div class="row" ng-if="!menuCtrl.isFrance">
                                                 <div class="col-md-3 col-xs-6" ng-repeat="page in menuCtrl.menuPrincipal.pages track by $index">
-                                                    <div ng-click="console.log(menuCtrl.menuPrincipal.pages)">aa</div>
                                                     <a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}" class="capital">{{page.text}}</a>
                                                     <a ng-if="page.pages&&blockConfig.menuLevel>1 && !blockConfig.disableLevelOne" ng-href="{{page.url}}" class="capital">{{page.text}}</a>
                                                     <span ng-if="page.pages&&blockConfig.menuLevel>1&& blockConfig.disableLevelOne" class="capital">{{page.text}}</span>
@@ -64,6 +63,7 @@
                                             </div>
                                           <div class="row">
                                              <div class="col-md-3 col-xs-6" ng-repeat="page in menuCtrl.menu.pages track by $index">
+                                                    <div class="coco" ng-click="console.log(menuCtrl.menuPrincipal.pages)">aa</div>
                                                 <a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}" class="capital">{{page.text}}</a>
                                                 <a ng-if="page.pages&&blockConfig.menuLevel>1 && !blockConfig.disableLevelOne" ng-href="{{page.url}}" class="capital">{{page.text}}</a>
                                                 <span ng-if="page.pages&&blockConfig.menuLevel>1&& blockConfig.disableLevelOne" class="capital">{{page.text}}</span>
