--- a/theme/cte/templates/blocks/navigation.html
+++ b/theme/cte/templates/blocks/navigation.html
@@ -51,7 +51,7 @@
                                        
                                        <div class="menuTab cursor-as-pointer" ng-if="menuCtrl.menuTab" data-toggle="collapse" href="#menuBis">
                                           <span class="menu_header" >
-                                                <a><h4>{{menuCtrl.menu.text}}</h4></a>
+                                                <a><h4>{{menuCtrl.menu.text}}</h4><h4>{{menuCtrl.menu.text}}</h4></a>
                                                   <span  class="menuToggle glyphicon" style="top:7px"></span>
                                           </span>
                                        </div>
