--- a/theme/9media/ckeditor/styles.css
+++ b/theme/9media/ckeditor/styles.css
@@ -1,118 +1,1 @@
-@font-face {
-  font-family: 'FontAwesome';
-  src: url('/theme/cte/fonts/fontawesome-webfont.eot?v=4.3.0');
-  src: url('/theme/cte/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('/theme/cte/fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('/theme/cte/fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('/theme/cte/fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('/assets/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: Hautecombe;
-  src: url(/theme/9media/fonts/Hautecombe-2014.eot);
-  src: url(/theme/9media/fonts/Hautecombe-2014.eot) format('embedded-opentype'), url(/theme/9media/fonts/Hautecombe-2014.woff) format('woff'), url(/theme/9media/fonts/Hautecombe-2014.ttf) format('truetype'), url(/theme/9media/fonts/Hautecombe-2014.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: HelveticaNeue;
-  src: url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.eot);
-  src: url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.eot) format('embedded-opentype'), url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.woff) format('woff'), url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.ttf) format('truetype'), url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: MyriadPro;
-  src: url(/theme/9media/fonts/MyriadPro-Regular.eot);
-  src: url(/theme/9media/fonts/MyriadPro-Regular.eot) format('embedded-opentype'), url(/theme/9media/fonts/MyriadPro-Regular.woff) format('woff'), url(/theme/9media/fonts/MyriadPro-Regular.ttf) format('truetype'), url(/theme/9media/fonts/MyriadPro-Regular.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: NexaBold;
-  src: url(/theme/9media/fonts/NexaBold.eot);
-  src: url(/theme/9media/fonts/NexaBold.eot) format('embedded-opentype'), url(/theme/9media/fonts/NexaBold.woff) format('woff'), url(/theme/9media/fonts/NexaBold.ttf) format('truetype'), url(/theme/9media/fonts/NexaBold.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: NexaLight;
-  src: url(/theme/9media/fonts/NexaLight.eot);
-  src: url(/theme/9media/fonts/NexaLight.eot) format('embedded-opentype'), url(/theme/9media/fonts/NexaLight.woff) format('woff'), url(/theme/9media/fonts/NexaLight.ttf) format('truetype'), url(/theme/9media/fonts/NexaLight.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: Raanana;
-  src: url(/theme/9media/fonts/Raanana.eot);
-  src: url(/theme/9media/fonts/Raanana.eot) format('embedded-opentype'), url(/theme/9media/fonts/Raanana.woff) format('woff'), url(/theme/9media/fonts/Raanana.ttf) format('truetype'), url(/theme/9media/fonts/Raanana.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: RaananaBold;
-  src: url(/theme/9media/fonts/RaananaBold.eot);
-  src: url(/theme/9media/fonts/RaananaBold.eot) format('embedded-opentype'), url(/theme/9media/fonts/RaananaBold.woff) format('woff'), url(/theme/9media/fonts/RaananaBold.ttf) format('truetype'), url(/theme/9media/fonts/RaananaBold.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: OswaldLight;
-  src: url(/theme/9media/fonts/Oswald-Light.eot);
-  src: url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'), url(/theme/9media/fonts/Oswald-Light.woff) format('woff'), url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'), url(/theme/9media/fonts/Oswald-Light.svg) format('svg');
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v12/JTUSjIg1_i6t8kCHKm459Wlhzg.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Merriweather';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Merriweather Regular'), local('Merriweather-Regular'), url(https://fonts.gstatic.com/s/merriweather/v19/u-440qyriQwlOrhSvowK_l5-fCZJ.ttf) format('truetype');
-}
-@font-face {
-  font-family: 'Oswald';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Oswald Regular'), local('Oswald-Regular'), url(https://fonts.gstatic.com/s/oswald/v16/TK3iWkUHHAIjg752GT8D.ttf) format('truetype');
-}
-.txt-red {
-  color: #c1573c !important;
-}
-.capital {
-  font-family: 'Montserrat', 'Arimo', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 14px;
-  font-weight: normal;
-}
-p.red-sub {
-  font-family: 'Montserrat', 'Arimo', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 14px;
-  font-weight: normal;
-  font-size: 11px !important;
-  color: #c1573c !important;
-  margin-bottom: 24px;
-}
-.linkbox {
-  text-align: center;
-  font-family: 'Montserrat';
-}
-.button {
-  padding: 12px 24px;
-  text-align: center;
-  font-family: 'Montserrat', 'Arimo', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 12px 3px 0;
-  transition: 0.3s ease opacity;
-  display: inline-block;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-  background: #c1573c;
-  box-shadow: 0px 2px #9e4232;
-  color: white;
-}
-.button:hover {
-  opacity: 0.8;
-}
+@import url(https://fonts.googleapis.com/css?family=Montserrat);@import url(https://fonts.googleapis.com/css?family=Merriweather);@import url(https://fonts.googleapis.com/css?family=Oswald);@font-face{font-family:FontAwesome;src:url(/theme/cte/fonts/fontawesome-webfont.eot?v=4.3.0);src:url(/theme/cte/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0) format('embedded-opentype'),url(/theme/cte/fonts/fontawesome-webfont.woff2?v=4.3.0) format('woff2'),url(/theme/cte/fonts/fontawesome-webfont.woff?v=4.3.0) format('woff'),url(/theme/cte/fonts/fontawesome-webfont.ttf?v=4.3.0) format('truetype'),url(/assets/fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular) format('svg');font-weight:400;font-style:normal}@font-face{font-family:Hautecombe;src:url(/theme/9media/fonts/Hautecombe-2014.eot);src:url(/theme/9media/fonts/Hautecombe-2014.eot) format('embedded-opentype'),url(/theme/9media/fonts/Hautecombe-2014.woff) format('woff'),url(/theme/9media/fonts/Hautecombe-2014.ttf) format('truetype'),url(/theme/9media/fonts/Hautecombe-2014.svg) format('svg');font-style:normal}@font-face{font-family:HelveticaNeue;src:url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.eot);src:url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.eot) format('embedded-opentype'),url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.woff) format('woff'),url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.ttf) format('truetype'),url(/theme/9media/fonts/HelveticaNeue/HelveticaNeue.svg) format('svg');font-style:normal}@font-face{font-family:MyriadPro;src:url(/theme/9media/fonts/MyriadPro-Regular.eot);src:url(/theme/9media/fonts/MyriadPro-Regular.eot) format('embedded-opentype'),url(/theme/9media/fonts/MyriadPro-Regular.woff) format('woff'),url(/theme/9media/fonts/MyriadPro-Regular.ttf) format('truetype'),url(/theme/9media/fonts/MyriadPro-Regular.svg) format('svg');font-style:normal}@font-face{font-family:NexaBold;src:url(/theme/9media/fonts/NexaBold.eot);src:url(/theme/9media/fonts/NexaBold.eot) format('embedded-opentype'),url(/theme/9media/fonts/NexaBold.woff) format('woff'),url(/theme/9media/fonts/NexaBold.ttf) format('truetype'),url(/theme/9media/fonts/NexaBold.svg) format('svg');font-style:normal}@font-face{font-family:NexaLight;src:url(/theme/9media/fonts/NexaLight.eot);src:url(/theme/9media/fonts/NexaLight.eot) format('embedded-opentype'),url(/theme/9media/fonts/NexaLight.woff) format('woff'),url(/theme/9media/fonts/NexaLight.ttf) format('truetype'),url(/theme/9media/fonts/NexaLight.svg) format('svg');font-style:normal}@font-face{font-family:Raanana;src:url(/theme/9media/fonts/Raanana.eot);src:url(/theme/9media/fonts/Raanana.eot) format('embedded-opentype'),url(/theme/9media/fonts/Raanana.woff) format('woff'),url(/theme/9media/fonts/Raanana.ttf) format('truetype'),url(/theme/9media/fonts/Raanana.svg) format('svg');font-style:normal}@font-face{font-family:RaananaBold;src:url(/theme/9media/fonts/RaananaBold.eot);src:url(/theme/9media/fonts/RaananaBold.eot) format('embedded-opentype'),url(/theme/9media/fonts/RaananaBold.woff) format('woff'),url(/theme/9media/fonts/RaananaBold.ttf) format('truetype'),url(/theme/9media/fonts/RaananaBold.svg) format('svg');font-style:normal}@font-face{font-family:OswaldLight;src:url(/theme/9media/fonts/Oswald-Light.eot);src:url(/theme/9media/fonts/Oswald-Light.eot) format('embedded-opentype'),url(/theme/9media/fonts/Oswald-Light.woff) format('woff'),url(/theme/9media/fonts/Oswald-Light.ttf) format('truetype'),url(/theme/9media/fonts/Oswald-Light.svg) format('svg');font-style:normal}.txt-red{color:#c1573c!important}.capital{font-family:Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;text-transform:uppercase;letter-spacing:2px;font-size:14px;font-weight:400}p.red-sub{font-family:Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;text-transform:uppercase;letter-spacing:2px;font-size:14px;font-weight:400;font-size:11px!important;color:#c1573c!important;margin-bottom:24px}.linkbox{text-align:center;font-family:Montserrat}.button{padding:12px 24px;text-align:center;font-family:Montserrat,Arimo,"Helvetica Neue",Helvetica,Arial,sans-serif;text-transform:uppercase;letter-spacing:2px;font-size:14px;font-weight:400;margin:12px 3px 0;transition:.3s ease opacity;display:inline-block;border-radius:5px;cursor:pointer;border:none;background:#c1573c;box-shadow:0 2px #9e4232;color:#fff}.button:hover{opacity:.8}
