--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12 col-md-6 image_container" ng-class="{'pair': $even}" 
             style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
             ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in contentListCtrl.contents track by $index">
-            <h2>
+            <h2 class="img_title">
                 {{content.fields.text.split('§')[0]}}
                 <span ng-if="content.fields.text.split('§').length > 1"><br>{{content.fields.text.split('§')[1]}}</span>
             </h2>
