9media contentlist css

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -161,7 +161,7 @@ h2.img_title {
     color: white;
 }
 
-.image_containh2.img_title:nth-child(even) {
+.image_container:nth-child(even) > h2 {
     text-align: right;
 }
 
