--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -8,7 +8,7 @@
                 <div ng-if="content.fields.text.split('§').length > 1">{{content.fields.text.split('§')[1].toUpperCase()}}</div>
             </h2>
             <p>
-                {{content.fields.summary}}
+                {{content.fields.summary.toUpperCase()}}
             </p>
         </div>
     </div>
