9media added batchupload for /upload url

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -163,6 +163,7 @@ html,body{
 p.client_img_container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 p.client_img_container > img {
     margin: 0.5rem 1rem;
