--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -1,5 +1,5 @@
-<div ng-controller="ContentListController as contentListCtrl">
+<!--<div ng-controller="ContentListController as contentListCtrl">-->
     <div class="row" ng-include="contentList/LienVersPageTemplate.html">
         
     </div>
-</div>
+<!--</div>-->
