--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -12,4 +12,10 @@
             </p>
         </div>
     </div>
+    <div class="row">
+        <h1>TEST</h1>
+    </div>
+    <div class="row">
+        <div ng-include="contentList/LienVersPageTemplate.html"></div>
+    </div>
 </div>
