--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -16,6 +16,6 @@
         <h1>TEST</h1>
     </div>
     <div class="row">
-        <div ng-include="LienVersPageTemplate.html"></div>
+        <div ng-include="/templates/blocks/LienVersPageTemplate.html"></div>
     </div>
 </div>
