--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -16,6 +16,7 @@
         <h1>TEST</h1>
     </div>
     <div class="row">
-        <div ng-include="contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')"></div>
+        <p>riri{{contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')}}</p>
+        <div ng-include="{{contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')}}"></div>
     </div>
 </div>
