--- a/theme/9media/templates/blocks/contentList.html
+++ b/theme/9media/templates/blocks/contentList.html
@@ -17,6 +17,6 @@
     </div>
     <div class="row">
         <p>riri{{contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')}}</p>
-        <div ng-include="{{contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')}}"></div>
+        <div ng-include="contentListCtrl.buildTemplateUrl('LienVersPageTemplate.html')"></div>
     </div>
 </div>
