--- a/theme/9media/templates/blocks/LienVersPageTemplate.html
+++ b/theme/9media/templates/blocks/LienVersPageTemplate.html
@@ -1,4 +1,4 @@
-<!-- <div class="col-xs-12 col-md-6 image_container" ng-class="{'pair': $even}" 
+<div class="col-xs-12 col-md-6 image_container" ng-class="{'pair': $even}" 
     style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
     ng-repeat="content in contentListCtrl.contents track by $index">
     <h2 class="img_title">
@@ -8,5 +8,4 @@
     <p>
         {{content.fields.summary.toUpperCase()}}
     </p>
-</div> -->
-<h2>coco</h2>
+</div>
