9media contactdetail template

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -155,6 +155,7 @@ html,body{
 	background: transparent !important;
 }
 
+
 ////////////////////////////////////////////////
 /////////// TEXTE RICHE CLIENTS  ///////////////
 /////////// (dans ckeditor > source le p a une class spécifique rentrée à la main)
@@ -170,7 +171,24 @@ p.client_img_container > img {
 }
 
 ////////////////////////////////////////////////
-    /////// CONTENTLIST ACCUEIL ////////////////
+/////// CONTENTLIST Contact ////////////////////
+////////////////////////////////////////////////
+
+.contact_container {
+    
+}
+
+.contact_container > .photo {
+    height: 200px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: scroll;
+    background-size: cover;
+    overflow: hidden;
+}
+
+////////////////////////////////////////////////
+/////// CONTENTLIST Lien vers page (/Accueil) //
 ////////////////////////////////////////////////
 
 h2.img_title {
