9media contactdetail template

--- a/theme/9media/templates/blocks/contentList/ContactTemplate.html
+++ b/theme/9media/templates/blocks/contentList/ContactTemplate.html
@@ -11,7 +11,7 @@
     </p>
 
     <p>
-        {{content.fields.summary.toUpperCase().replace(/(^|\s)\@[A-Z]{2}(\s|$)/g, '').trim()}}
+        {{content.fields.summary.toUpperCase()}}
     </p>
 
 </div>
