--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -175,11 +175,12 @@ p.client_img_container > img {
 ////////////////////////////////////////////////
 
 .contact_container {
-    
+    width: 200px;
 }
 
 .contact_container > .photo {
     height: 200px;
+    width: 170px;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
