--- a/theme/9media/templates/blocks/contentList/ContactTemplate.html
+++ b/theme/9media/templates/blocks/contentList/ContactTemplate.html
@@ -1,8 +1,7 @@
-<div class="col-xs-12 col-md-6 contact_container" ng-class="{'pair': $even}" 
-    style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.image, {width:'800px',mode:'boxed'})}}')"
+<div class="col-xs-12 col-md-6 contact_container"
     ng-repeat="content in contentListCtrl.contents track by $index">
 
-    <div class="photo">
+    <div class="photo" style="background-image:url('{{rubedo.imageUrl.getUrlByMediaId(content.fields.photoContact, {width:'170px',mode:'boxed'})}}')">
         <div class="flag"></div>
     </div>
 
